--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "^5.0.0",
     "redux": "^4.2.0",
     "typescript": "^4.5.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
