--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.11.1",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.5",
     "react-router-bootstrap": "^0.26.0",
@@ -24,6 +26,7 @@
     "redux": "^4.2.0",
     "typescript": "^4.5.5",
     "uuid": "^9.0.1",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
